# slashurl

./: .env.dev  .env.example  .env.prod  .eslintrc.json  .gitignore  .prettierrc  Cargo.toml  README.md  compose-dev.yml  compose.dev.yml  compose.prod.yml  compose.yml  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/: dependabot.yml
app/backend/: .dev.env  .env.example  Cargo.toml  project.json
app/backend/api/: Cargo.toml
app/backend/api/src/: lib.rs
app/backend/core/: Cargo.toml
app/backend/entity/: Cargo.toml
app/backend/entity/src/entities/: mod.rs  prelude.rs  url.rs
app/backend/migration/: Cargo.toml
app/backend/migration/src/: m20221029_141216_url.rs
app/discord-bot/: .dev.env.example  .env.example  .gitignore  jest.config.ts  package.json  project.json
app/discord-bot/src/: main.ts
app/discord-bot/src/commands/: index.ts  ping.ts  server.ts  url.ts  user.ts
app/discord-bot/src/events/: clientReady.ts  commandInteractionCreate.ts
app/discord-bot/src/utils/: apiWrapper.ts  checkUrl.ts  client.ts  randomHexColor.ts  registerSlashCommands.ts
app/website/: .dev.env  .env.example  index.html  package.json  project.json  tsconfig.app.json  tsconfig.json  tsconfig.spec.json  vite.config.ts
app/website/src/: App.svelte  Root.svelte  main.ts
app/website/src/lib/: DisplayCreatedUrlInfo.svelte  DisplayUrlInfo.svelte
app/website/src/utils/: apiWrapper.ts
backend/: Cargo.toml  Dockerfile
backend/.devcontainer/: devcontainer.json
backend/api/: Cargo.toml
backend/api/src/: lib.rs  redirect.rs
backend/api/src/api/: url.rs
backend/core/: Cargo.toml
backend/entity/src/entities/: mod.rs  url.rs
backend/migration/src/: lib.rs  m20221029_141216_url.rs
backend/migrations/2022-10-28-230848_shorturl/: up.sql
backend/src/: lib.rs  main.rs
backend/src/db/: models.rs  schema.rs  utils.rs
backend/src/endpoints/api/: mod.rs  requests.http  urls.rs
lib/api-wrapper/: .lib.swcrc  README.md  jest.config.ts  package.json  project.json
lib/api-wrapper/src/: index.ts
lib/api-wrapper/src/lib/: ApiWrapper.spec.ts  ApiWrapper.ts  errors.ts  fetch.ts  result.ts
