[package]
name = "slashurl-backend"
version = "0.7.0"
edition = "2021"
license = "GPL-3.0-only"
authors = ["Henrique Kirch Heck <86362827+henriquekirchheck@users.noreply.github.com>"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "api", "core", "entity", "migration"]

[dependencies]
slashurl-api = { path = "./api" }