[package]
name = "api"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.6.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
orm-core = { path = "../core" }
tracing-subscriber = "0.3.16"
tracing = "0.1.37"
entity = { path = "../entity" }
migration = { path = "../migration" }
derive_more = "0.99.17"
nanoid = "0.4.0"