[package]
name = "orm-core"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[dependencies.sea-orm]
version = "^0.11.0"
features = [
    "runtime-actix-rustls",
    "sqlx-postgres",
]